# enzymeml-rs

./: .gitignore  Cargo.toml  README.md  abts.json  build.rs  enzmldoc_reaction_sr1trustregion.json  enzmldoc_reaction_sr1trustregion_report.json  model.md
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml
benches/: simulation.rs
examples/: simulation.rs
src/: conversion.rs  equation.rs  info.rs  io.rs  lib.rs  llm.rs  main.rs  plot.rs  plotting.rs  suite.rs  system.rs  utils.rs
src/bindings/: wasm.rs
src/identifiability/: egoprofile.rs  grid.rs  parameter.rs  profile.rs  results.rs  utils.rs
src/legacy/: structs.rs
src/macros/: extract_macro.rs  reaction_macro.rs  unit_macro.rs  unit_maps.rs  unwrap_list.rs
src/mcmc/: diagnostics.rs  error.rs  likelihood.rs  output.rs  priors.rs  problem.rs
src/objective/: error.rs  loss.rs  objfun.rs
src/optim/: bound.rs  error.rs  initials.rs  metrics.rs  objective.rs  observer.rs  problem.rs  report.rs  runner.rs  system.rs  transformation.rs
src/optim/optimizers/: bfgs.rs  ego.rs  lbfgs.rs  optimizer.rs  pso.rs  srtrust.rs  utils.rs
src/sbml/: annotations.rs  error.rs  read.rs  reader.rs  speciestype.rs  units.rs  utils.rs  version.rs  writer.rs
src/sbml/snapshots/: enzymeml__sbml__reader__tests__parse_omex_v1.snap  enzymeml__sbml__reader__tests__parse_omex_v2.snap
src/sbml/v1/: extract.rs  parser.rs  schema.rs  serializer.rs
src/sbml/v2/: extract.rs  schema.rs  serializer.rs
src/simulation/: error.rs  init_cond.rs  interpolation.rs  macros.rs  output.rs  result.rs  runner.rs  setup.rs  stoich.rs  system.rs
src/tabular/: dataframe.rs  reader.rs  writer.rs
src/validation/: consistency.rs  equations.rs  measurements.rs  parameters.rs  reactions.rs  schema.rs  validator.rs
src/versions/: v2.rs
tests/: test_optim.rs  test_simulation.rs
tests/data/: enzmldoc.json  enzmldoc_fitted.json  enzmldoc_missing_param_value.json  enzmldoc_no_model.json  enzmldoc_reaction.json  enzmldoc_reaction_and_rate_rules.json  enzmldoc_reaction_init_assign.json  enzymeml_inconsistent.json  enzymeml_inconsistent_invalid.json  enzymeml_v2.omex  expected_table.txt
