[package]
name = "enzymeml"
version = "0.1.0"
edition = "2021"
description = "The EnzymeML Rust library"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "enzymeml"
path = "src/bin/cli.rs"

[dependencies]
derive_builder = "0.20.0"
lazy_static = "1.5.0"
meval = { version = "0.2.0", features = ["serde"] }
schemars = "0.8.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
plotly = "0.12.1"
ordered-float = "5.0"
ndarray = "^0.15.6"
thiserror = "2.0.9"
nalgebra = "0.33.2"
sha2 = "0.10.8"
peroxide = { version = "0.39.2", optional = true }
evalexpr-jit = { version = "0.2.0", features = ["nalgebra"], optional = true }
splines = { version = "4.4.2", features = ["nalgebra"], optional = true }
polars = { version = "0.41", features = [
    "csv",
], default-features = false, optional = true }
calamine = { version = "0.26.1", optional = true }
xlsxwriter = { version = "0.6.1", optional = true }
argmin-observer-slog = { version = "0.1.0", optional = true }
argmin = { version = "0.10.0", optional = true }
argmin-math = { version = "0.4.0", features = [
    "ndarray_latest-nolinalg",
], optional = true }
finitediff = { version = "0.1.4", features = ["ndarray"], optional = true }
egobox-ego = { version = "0.26.0", optional = true }
getrandom = { version = "*", features = ["js"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
jsonschema = { version = "0.29.0", optional = true, default-features = false }
tsify-next = { version = "0.5.5", optional = true }
clap = { version = "4.5.31", features = ["derive"] }
itertools = "0.14.0"
mdmodels = { git = "https://github.com/FAIRChemistry/md-models.git", branch = "fix-rust-vec-gen", optional = true }
tokio = { version = "1.44.0", features = ["full"] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
debug = false

[features]
default = ["optimization", "simulation", "llm"]
tabular = ["polars", "calamine", "xlsxwriter"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "tsify-next", "jsonschema"]
simulation = ["peroxide", "evalexpr-jit", "splines"]
llm = ["mdmodels"]
optimization = [
    "argmin-math",
    "argmin",
    "finitediff",
    "egobox-ego",
    "argmin-observer-slog",
]
serde-wasm-bindgen = ["dep:serde-wasm-bindgen"]
tsify-next = ["dep:tsify-next"]
mdmodels = ["dep:mdmodels"]

[dev-dependencies]
approx = "0.5.1"
wasm-bindgen-test = "0.3.50"

[build-dependencies]
glob = "0.3.2"
md5 = "0.7.0"
prettyplease = "0.2.31"
syn = { version = "2.0.100", features = ["full", "parsing"] }
mdmodels = { git = "https://github.com/FAIRChemistry/md-models.git", branch = "fix-rust-vec-gen" }
